# project-django

./: pyproject.toml
project_django/: manage.py
project_django/landingpagewebsite/: asgi.py  settings.py  urls.py  wsgi.py
