[tool.poetry]
name = "project-django"
version = "0.1.0"
description = ""
authors = ["serakate <serakate@yandex.ru>"]
readme = "README.md"
packages = [{include = "project_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
